<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tekst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/podaj_nowe_dane"
        android:background="#8BC34A"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tekst"
        android:layout_marginBottom="8dp"
        android:hint="@string/ksywka"
        android:inputType="text"
        android:minHeight="48dp" />
    <EditText
        android:id="@+id/edit_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_nickname"
        android:layout_marginBottom="8dp"
        android:hint="@string/has_o"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password1"
        android:layout_marginBottom="8dp"
        android:hint="@string/powt_rz_has_o"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/zapiszDaneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zapisz"
        android:layout_below="@id/edit_password2"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/backToHomeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zapiszDaneButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:text="@string/nie_zmieniaj_danych"
        />

</RelativeLayout>