<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:padding="20dp">

    <TextView
        android:id="@+id/tekst1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#75FFFFFF"
        android:text="@string/o_nas"
        android:textColor="?attr/android:color"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tekst2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tekst1"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="24dp"
        android:textColor="?attr/android:color"
        android:background="#75FFFFFF"
        android:text="@string/o_nas_opis"
        android:textAlignment="center"
        android:textSize="20sp"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tekst1" />

    <TextView
        android:id="@+id/tekst3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tekst1"
        android:layout_marginTop="28dp"
        android:background="#75FFFFFF"
        android:textColor="?attr/android:color"
        android:padding="5sp"
        android:text="@string/telefon_48_352208492"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tekst2" />

    <TextView
        android:id="@+id/tekst4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tekst1"
        android:layout_marginTop="24dp"
        android:background="#75FFFFFF"
        android:text="@string/e_mail_spokoquzko_wp_pl"
        android:textColor="?attr/android:color"
        android:textSize="20sp"
        android:padding="5sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tekst3" />

    <TextView
        android:id="@+id/backToHome"
        android:layout_width="179dp"
        android:layout_height="66dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="156dp"
        android:background="?attr/colorButtons"
        android:textColor="?attr/android:textColor"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/powr_t"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tekst4"
        app:layout_constraintVertical_bias="0.022" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="135dp"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/loco" />

</androidx.constraintlayout.widget.ConstraintLayout>