<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#CAFF8C"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf = "parent"
        android:text="@string/ocen_nasz_aplikacj"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/rating_bar"
        android:layout_below="@id/tittle"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/rateCount"
        android:layout_below="@id/rating_bar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/napisz_opini"
        android:id="@+id/opinia"
        android:layout_below="@id/rateCount"
        android:background="@color/white"/>

    <Button
        android:id="@+id/backToHome"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/opinia"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:text="@string/mo_e_p_niej"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf = "parent"
        />

    <Button
        android:id="@+id/rateButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/oce"
        android:textSize="15sp"
        android:layout_below="@id/opinia"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/showRating"
        android:layout_marginTop="10dp"
        android:layout_below="@id/backToHome"/>

    <Button
        android:id="@+id/showRatingApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="Pokaż opinie użytkowników"
        android:textSize="15sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>